# kantharos-bot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
config/: .secrets_template.toml  general_cfg_template.toml  settings.toml  youtube_dl_cfg.toml
help_texts/: chat  fact  insult  joke  matches  music  tournaments
src/kantharos_bot/: bot.py  main.py
src/kantharos_bot/bot/: bot.py
src/kantharos_bot/commands/: __init__.py  chat.py  esports_match.py  esports_tournament.py  fact.py  insult.py  joke.py  music_stream.py
src/kantharos_bot/utils/: config.py  load_config.py  load_help.py  logging.py  yt_source.py
tests/: __init__.py  test_kantharos_bot.py
