[tool.poetry]
name = "kantharos-bot"
version = "0.3.0"
description = ""
authors = ["Andre Faria <andremarcalfaria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
pandascore = "^0.2.0"
toml = "^0.10.2"
pytz = "^2023.3.post1"
fuzzywuzzy = "^0.18.0"
pytube = "^12.1.3"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
jokeapi = "^1.0.5"
python-Levenshtein = "^0.20.9"
dynaconf = "^3.2.4"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
flake8 = "^6.1.0"
black = "^23.12.1"
mypy = "^1.8.0"
coverage = "^7.4.0"
isort = "^5.13.2"
ipython = "^8.19.0"
pylint = "^2.17.7"
tomli = "^2.0.1"
pydocstyle = "^6.3.0"
pre-commit = "^3.6.0"
poetry-pre-commit-plugin = "^0.1.2"
poetry-plugin-up = "^0.7.1"

[tool.poetry.scripts]
kantharos-bot = "kantharos_bot.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.pylint.main]
fail-under = 1
py-version = "3.10"

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
docstring-min-length = -1
const-naming-style = "UPPER_CASE"

[tool.pylint.format]
max-line-length = 100

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run isort .
    poetry run black .
    poetry run pylint ./**/*.py
    poetry run coverage run -m pytest
    poetry run coverage report
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
