[project]
name = "kantharos-bot"
version = "1.0.0"
description = ""
authors = [{ name = "Andre Faria", email = "andremarcalfaria@gmail.com" }]
dependencies = [
    "discord>=2.3.2",
    "pandascore>=0.2.0",
    "toml>=0.10.2",
    "pytz>=2025.2",
    "fuzzywuzzy>=0.18.0",
    "pytube>=15.0.0",
    "youtube-dl>=2021.12.17",
    "PyNaCl>=1.6.0",
    "jokeapi>=1.0.5",
    "dynaconf>=3.2.11",
    "openai>=1.108.2",
    "audioop-lts>=0.2.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "flake8>=7.1.1",
    "black>=24.10.0",
    "mypy>=1.12.1",
    "coverage>=7.6.4",
    "isort>=5.13.2",
    "ipython>=8.28.0",
    "pylint>=3.3.1",
    "tomli>=2.0.2",
    "pydocstyle>=6.3.0",
    "pre-commit>=4.0.1",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kantharos-bot = "kantharos_bot.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.pylint.main]
fail-under = 1
py-version = "3.10"

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
docstring-min-length = -1
const-naming-style = "UPPER_CASE"

[tool.pylint.format]
max-line-length = 100

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310

[testenv]
allowlist_externals = poetry
commands =
    pdm install -v
    pdm run isort .
    pdm run black .
    pdm run pylint ./**/*.py
    pdm run coverage run -m pytest
    pdm run coverage report
"""
